tests/baselines/reference/accessorWithRestParam.errors.txt
==== tests/cases/compiler/accessorWithRestParam.ts (2 errors) ====
    class C {
        set X(...v) { }
             ~~~~
!!! accessorWithRestParam.ts(2,10): error TS1053: 'set' accessor cannot have rest parameter.
        static set X(...v2) { }
                    ~~~~~
!!! accessorWithRestParam.ts(3,17): error TS1053: 'set' accessor cannot have rest parameter.
    }